--- a/content/resources/21l-701f03-th.md
+++ b/content/resources/21l-701f03-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21l-701-literary-interpretation-interpreting-poetry-fall-2003/66b78c7fb7dba38672c4ef6bea8656d5_21l-701f03-th.jpg
+file: /media/courses/21l-701-literary-interpretation-interpreting-poetry-fall-2003/66b78c7fb7dba38672c4ef6bea8656d5_21l-701f03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Whirlwind of lovers (Illustration to Dante's Inferno) by William Blake;\
@@ -9,8 +9,10 @@ image_metadata:
   credit: ''
   image-alt: Whirlwind of lovers by William Blake.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21l-701f03-th.jpg
 uid: 66b78c7f-b7db-a386-72c4-ef6bea8656d5
 ---
+New image Upload
