--- a/content/resources/21l-701f03.md
+++ b/content/resources/21l-701f03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21l-701-literary-interpretation-interpreting-poetry-fall-2003/5957d169bd7806a30d653b8902b961b6_21l-701f03.jpg
+file: /media/courses/21l-701-literary-interpretation-interpreting-poetry-fall-2003/5957d169bd7806a30d653b8902b961b6_21l-701f03.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Whirlwind of lovers (Illustration to Dante's Inferno) by William Blake;\
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Whirlwind of lovers by William Blake.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21l-701f03.jpg
